# vm

./: CMakeLists.txt  Main.java  code.asm  main  main.c  parser  tokenizer  tokenizer.c  traps.asm
vm/: CMakeLists.txt
vm/include/: assembler.h  tokenizer.h
vm/include/pvm/: assembler.h  error.h  symbol.h  tokenizer.h  utils.h  validator.h  vm.h
vm/src/: assembler.c  error.c  symbol.c  tokenizer.c  utils.c  validator.c  vm.c
